sk-driver/src/tests/snapshots/sk_driver__tests__mutation_test__itest__mutate_pod@true.snap
---
source: sk-driver/src/tests/mutation_test.rs
expression: json_pod
---
Object {
    "apiVersion": String("v1"),
    "kind": String("Pod"),
    "metadata": Object {
        "annotations": Object {
            "simkube.io/original-namespace": String("test-namespace"),
            "simkube.io/pod-sequence-number": String("0"),
            "simkube.io/pod-spec-stable-hash": String("18161541283955474812"),
            "simkube.kwok.io/stage-complete-time": String("1970-01-01T00:00:21+00:00"),
        },
        "labels": Object {
            "foo": String("bar"),
            "simkube.io/simulation": String("test-sim"),
            "simkube.kwok.io/stage-complete": String("true"),
        },
        "name": String("the-pod"),
        "namespace": String("test-namespace"),
        "ownerReferences": Array [
            Object {
                "apiVersion": String("apps/v1"),
                "kind": String("Deployment"),
                "name": String("the-deployment"),
                "uid": String("yuioyoiuy"),
            },
        ],
    },
    "spec": Object {
        "containers": Array [],
        "nodeSelector": Object {
            "boo": String("far"),
            "type": String("virtual"),
        },
        "tolerations": Array [
            Object {
                "effect": String("NoSchedule"),
                "key": String("kwok-provider"),
                "operator": String("Exists"),
            },
        ],
    },
    "status": Object {
        "phase": String("Running"),
    },
}
